Make button work in browser

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Random Solo Piano Piece</h1>
-    <button id="btn">Get Random Piano Piece</button>
+    <input type="submit" id="submitBtn">Get Random Piano Piece</input>
     <div id="display"></div>
     <script src="./main.js"></script>
 </body>
