improve formatting and load works first

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Random Solo Piano Piece</h1>
-    <input type="submit" id="submitBtn">Get Random Piano Piece</input>
+    <input type="submit" id="submitBtn" value="Get Random Piano Piece"></input>
     <div id="display"></div>
     <script src="./main.js"></script>
 </body>
