--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Solo Piano Piece</title>
+    <title>Random Piano Piece</title>
 
     <!-- Google Font (optional, but adds personality) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,11 +18,18 @@
 
 <body>
     <main class="card">
-        <h1>Random Solo Piano Piece</h1>
+        <h1>Random Piece Generator</h1>
         <div>
-            <button id="submitBtn" class="btn-primary">
-                Get Random Piano Piece
+            <button id="soloPianoBtn" class="btn-primary">
+                Solo Piano
             </button>
+            <button id="featuringPianoBtn" class="btn-primary">
+                Featuring Piano
+            </button>
+            <button id="arrangedForPianoBtn" class="btn-primary">
+                Arranged for Piano
+            </button>
+
         </div>
 
         <section id="result" hidden>
