Slightly better formatting

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
             <br>
             <hr>
             <br>
-            <h2 id="title" class="result-title"></h2>
-            <p>
-                <a id="url" class="result-link" href="#" target="_blank" rel="noopener">Open on IMSLP</a>
-            </p>
+            <div id="resultDiv">
+                <h2 id="pieceType"></h2>
+                <br>
+                <h2 id="title" class="result-title"></h2>
+                <p>
+                    <a id="url" class="result-link" href="#" target="_blank" rel="noopener">Open on IMSLP</a>
+                </p>
+            </div>
         </section>
     </main>
 
