Add Solo Keyboard works

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <button id="arrangedForPianoBtn" class="btn-primary">
                 Arranged for Piano
             </button>
-
+            <button id="forKeyboardBtn" class="btn-primary">
+                Solo Keyboard
+            </button>
         </div>
 
         <section id="result" hidden>
